--- a/scss/style.css
+++ b/scss/style.css
@@ -5,9 +5,123 @@
   padding: 0px;
 }
 
+body {
+  font-size: 1.5em;
+  height: 100vh;
+}
+
+body .upper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 55% 40%;
+      grid-template-columns: 55% 40%;
+  height: 65vh;
+}
+
+body .upper .big {
+  background-image: url(../images/desktop-image-hero-1.jpg);
+  background-size: cover;
+}
+
 body .upper .big nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 50px;
+  padding: 10px;
+}
+
+body .upper .big nav ul {
+  margin-left: 50px;
+}
+
+body .upper .big nav ul li {
+  display: inline;
+  margin: 0px 5px;
+  position: relative;
+}
+
+body .upper .big nav ul li:hover a::before {
+  width: 100%;
+  opacity: 1;
+}
+
+body .upper .big nav ul li a {
+  text-decoration: none;
+  color: white;
+  padding: 1px;
+}
+
+body .upper .big nav ul li a::before {
+  content: "";
+  width: 50%;
+  position: absolute;
+  height: 2px;
+  bottom: -5px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background-color: white;
+  -webkit-transition: width 0.3s;
+  transition: width 0.3s;
+  opacity: 0;
+}
+
+body .upper .small {
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .upper .small .content {
+  width: 90%;
+}
+
+body .upper .small .content p {
+  line-height: 130%;
+}
+
+body .upper .small .content p span {
+  font-size: 50px;
+  line-height: 130%;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+body .upper .small .content button {
+  margin-top: 30px;
+  border: none;
+  background-color: transparent;
+  letter-spacing: 5px;
+  word-spacing: 10px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+body .lower {
+  width: 100%;
+  height: 35vh;
+}
+
+body .lower .grid-container-3 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 35% 1fr;
+      grid-template-columns: 1fr 35% 1fr;
+}
+
+body .lower .grid-container-3 div img {
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
