--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,100 @@
-*{
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
-body{
-    .upper{
-        .big{
-            nav{
-                display: flex;
+body {
+  font-size: 1.5em;
+  height: 100vh;
+  .upper {
+    display: grid;
+    grid-template-columns: 55% 40%;
+    height: 65vh;
+    .big {
+      background-image: url(../images/desktop-image-hero-1.jpg);
+      background-size: cover;
+      nav {
+        display: flex;
+        // justify-content: space-between;
+        align-items: center;
+        margin-left: 50px;
+        padding: 10px;
+        ul {
+          margin-left: 50px;
+          li {
+            display: inline;
+            margin: 0px 5px;
+            position: relative;
+
+            &:hover {
+              a {
+                &::before {
+                  width: 100%;
+                  opacity: 1;
+                }
+              }
             }
+            a {
+              &::before {
+                content: "";
+                width: 50%;
+                position: absolute;
+                height: 2px;
+                bottom: -5px;
+                left: 50%;
+                transform: translateX(-50%);
+                background-color: white;
+                transition: width 0.3s;
+                opacity: 0;
+              }
+              text-decoration: none;
+              color: white;
+              padding: 1px;
+            }
+          }
         }
+      }
     }
+    .small {
+      text-align: left;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .content {
+        width: 90%;
+        p {
+          line-height: 130%;
+          span {
+            font-size: 50px;
+            line-height: 130%;
+            display: block;
+            font-weight: bold;
+            margin-bottom: 20px;
+          }
+        }
+        button {
+          margin-top: 30px;
+          border: none;
+          background-color: transparent;
+          letter-spacing: 5px;
+          word-spacing: 10px;
+          font-size: 25px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .lower {
+    width: 100%;
+    height: 35vh;
+    .grid-container-3 {
+      display: grid;
+      grid-template-columns: 1fr 35% 1fr;
+      div{
+        img{
+            width:100%;
+        }
+      }
+    }
+  }
 }
