--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@
   padding: 0px;
   font-family: "League Spartan", sans-serif;
 }
-body {
+body {  
   font-size: 1em;
   height: 100vh;
   .upper {
@@ -112,11 +112,11 @@ body {
     height: 35vh;
     .grid-container-3 {
       display: grid;
-      grid-template-columns: 1fr 35% 1fr;
+      grid-template-columns: 1fr 46% 1fr;
       div {
         height: 35vh;
         img {
-          width: 100%;
+          height: 100%;
         }
       }
       .content {
