--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,6 +113,12 @@ body {
           word-spacing: 10px;
           font-size: 25px;
           cursor: pointer;
+          border: 2px solid transparent;
+          padding: 10px;
+          transition: border 0.4s ;
+          &:hover{
+            border-color: black;
+          }
         }
       }
     }
