--- a/scss/style.css
+++ b/scss/style.css
@@ -23,6 +23,8 @@ body .container {
 }
 
 body .upper {
+  max-width: 1440px;
+  margin: 0px auto;
   max-height: 500px;
   display: -ms-grid;
   display: grid;
@@ -59,6 +61,10 @@ body .upper .big nav .currentTitle {
 
 body .upper .big nav ul {
   margin-left: 50px;
+}
+
+body .upper .big nav ul .close-icon {
+  display: none;
 }
 
 body .upper .big nav ul li {
@@ -165,6 +171,8 @@ body .upper .small .content button:hover {
 
 body .lower {
   overflow: hidden;
+  max-width: 1440px;
+  margin: 0px auto;
   width: 100%;
   height: 35vh;
 }
@@ -316,7 +324,7 @@ body .lower .grid-container-3 .content p {
     height: 700px;
   }
   body .upper .big nav {
-    width: 55%;
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -334,7 +342,29 @@ body .lower .grid-container-3 .content p {
     display: block;
   }
   body .upper .big nav ul {
+    background-color: white;
+    margin: 0px;
+    height: 80px;
+    padding: 0px 10px;
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    top: 0%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     display: none;
+  }
+  body .upper .big nav ul .close-icon {
+    display: block;
+  }
+  body .upper .big nav ul li a {
+    color: black;
   }
   body .upper .small {
     height: 400px;
@@ -359,7 +389,6 @@ body .lower .grid-container-3 .content p {
     height: 480px;
   }
   body .lower .grid-container-3 div.content {
-    margin: 30px 0px;
     height: 200px;
   }
 }
@@ -373,14 +402,27 @@ body .lower .grid-container-3 .content p {
     margin: 0px;
     width: 100%;
   }
+  body .upper .big nav ul {
+    padding: 5px;
+  }
   body .upper .small .content {
     width: 90%;
   }
   body .upper .small .opitions {
-    top: -68px;
+    top: -51px;
+  }
+  body .upper .small .opitions img {
+    cursor: pointer;
+    width: 10px;
+  }
+  body .upper .small .opitions img:nth-child(1) {
+    margin-right: 20px;
+  }
+  body .upper .small .opitions img:nth-child(2) {
+    margin-left: 20px;
   }
   body .lower .grid-container-3 div {
-    height: 250px;
+    height: 200px;
   }
   body .lower .grid-container-3 div.content {
     width: 90%;
