--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,8 @@ body {
   font-size: 1em;
   height: 100vh;
   .upper {
+    max-width: 1440px;
+    margin: 0px auto;
     max-height: 500px;
     display: grid;
     grid-template-columns: 55% 40%;
@@ -38,6 +40,9 @@ body {
           color: white;
         }
         ul {
+          .close-icon {
+            display: none;
+          }
           margin-left: 50px;
           li {
             display: inline;
@@ -129,6 +134,8 @@ body {
   }
   .lower {
     overflow: hidden;
+    max-width: 1440px;
+    margin: 0px auto;
     width: 100%;
     height: 35vh;
     .grid-container-3 {
@@ -266,7 +273,7 @@ body {
         background-size: cover;
         height: 700px;
         nav {
-          width: 55%;
+          width: 100%;
           display: flex;
           font-size: 1.3em;
           align-items: center;
@@ -277,7 +284,27 @@ body {
             display: block;
           }
           ul {
+            background-color: white;
+            margin: 0px;
+            height: 80px;
+            padding: 0px 10px;
+            position: absolute;
+            width: 100%;
+            left: 0px;
+            top: 0%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
             display: none;
+            .close-icon {
+              display: block;
+              // margin: 10px;
+            }
+            li {
+              a {
+                color: black;
+              }
+            }
           }
         }
       }
@@ -299,7 +326,6 @@ body {
         div {
           height: 480px;
           &.content {
-            margin: 30px 0px;
             height: 200px;
           }
         }
@@ -316,22 +342,35 @@ body {
         nav {
           margin: 0px;
           width: 100%;
+          ul {
+            padding: 5px;
+          }
         }
       }
-      .small{
-        .content{
+      .small {
+        .content {
           width: 90%;
         }
-        .opitions{
-          top: -68px;
+        .opitions {
+          top: -51px;
+          img {
+            cursor: pointer;
+            width: 10px;
+            &:nth-child(1) {
+              margin-right: 20px;
+            }
+            &:nth-child(2) {
+              margin-left: 20px;
+            }
+          }
         }
       }
     }
     .lower {
-      .grid-container-3{
-        div{
-          height: 250px;
-          &.content{
+      .grid-container-3 {
+        div {
+          height:200px;
+          &.content {
             width: 90%;
             padding: 0px;
             height: 300px;
