--- a/scss/style.scss
+++ b/scss/style.scss
@@ -291,11 +291,18 @@ body {
             position: absolute;
             width: 100%;
             left: 0px;
-            top: 0%;
-            display: flex;
+            top: 100%;
             justify-content: space-around;
             align-items: center;
             display: none;
+            transition:top 0.3s;
+            animation-duration: 0.3s;
+            animation-iteration-count: 1;
+            animation-direction: alternate;
+
+            &.visible{
+              top: 0%;
+            }
             .close-icon {
               display: block;
               // margin: 10px;
@@ -378,5 +385,25 @@ body {
         }
       }
     }
+  }
+}
+@keyframes dropdown {
+  from{
+    opacity: 0;
+    top:-100%;
+  }
+  to{
+    opacity: 1;
+    top: 0%;
+  }
+}
+@keyframes fadeUp {
+  from{
+    opacity: 1;
+    top: 0%;
+  }
+  to{
+    opacity: 0;
+    top:-100%;
   }
 }
